se rediseño el tablero, se hizo un refactor del codigo a español y comentarios

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Triki</title>
+
+    <link rel="shortcut icon" href="./src/assets/" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <title>Tic Tac Toe</title>
 </head>
 <body>
     <header>
-        <h2>Jhon Wilmer Azcarate Rivera</h2>
+        <img src="./src/assets/icons/icon.png" alt="tic tac toe">
+        <h1>Tic Tac Toe</h1>
+        <img src="./src/assets/icons/senaicon.png" alt="logo verde sena">
     </header>
     <main>
         <section id="triki">
@@ -17,8 +22,8 @@
         </section>
     </main>
     <footer>
-        <h2>ADSO 2561080</h2>
+        <h2>ADSO Noche 2561080</h2>
     </footer>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./src/scripts/triki.js"></script>
 </body>
 </html>
